Google java format fix